@@ -5,9 +5,15 @@ tidy
 --FILE--
 <?php
 
-$nx = new Tidy("*");
+$nx = new Tidy();
 $nx->diagnose();
+var_dump($nx);
 
 ?>
 --EXPECTF--
-Warning: tidy::__construct(): Cannot load "*" into memory%win %s on line %d
+object(tidy)#%d (2) {
+  ["errorBuffer"]=>
+  NULL
+  ["value"]=>
+  NULL
+}
